--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ADMIN_EMAIL=charliepugh92@gmail.com
-ADMIN_PASSWORD=AshenPhoenixGM
+ADMIN_EMAIL=longglassofwater@hotmail.com
+ADMIN_PASSWORD=VertigoMDI
